# wonderblob

./: .gitignore  CHANGELOG.md  Cargo.toml  Install-Wonderblob.ps1  README.md  RESUME.md  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/wonderblob-core/: Cargo.toml
crates/wonderblob-core/src/: azblob.rs  edit.rs  error.rs  hostkey.rs  lib.rs  objstore.rs  onedrive.rs  s3.rs  sftp.rs  ssh_agent.rs  vfs.rs
crates/wonderblob-core/src/transfer/: engine.rs  mock.rs  mod.rs  model.rs  store.rs
crates/wonderblob-core/tests/: azblob_contract.rs  edit_sftp.rs  onedrive_live.rs  onedrive_mock.rs  s3_contract.rs  sftp_agent.rs  sftp_contract.rs  sftp_hostkey.rs  transfer_engine.rs  transfer_sftp.rs  zz_double_spawn_probe.rs
crates/wonderblob-core/tests/contract/: mod.rs
crates/wonderblob-core/tests/sftp_support/: mod.rs
docs/superpowers/plans/: 2026-06-07-foundation-sftp-slice.md  2026-06-08-dragdrop-packaging-hostkeys.md  2026-06-08-edit-session.md  2026-06-08-onedrive-backend.md  2026-06-08-s3-azure-backends.md  2026-06-08-transfer-engine.md  2026-06-08-ux-pass.md  2026-06-08-wonderblob-install-parity.md
docs/superpowers/specs/: 2026-06-07-wonderblob-design.md  2026-06-08-wonderblob-install-parity-design.md
packaging/flatpak/: com.wonderblob.app.yml
scripts/: test-azblob-down.sh  test-azblob-up.sh  test-s3-down.sh  test-s3-up.sh  test-sftp-auth.sh  test-sftp-down.sh  test-sftp-up.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  commands.rs  dropfiles.rs  edit.rs  fake_backend.rs  lib.rs  main.rs  onedrive_auth.rs  state.rs  transfers.rs
src/lib/: api.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  transfer-format.test.ts  transfer-format.ts
src/lib/components/: BookmarkList.svelte  Breadcrumb.svelte  ConflictModal.svelte  ConnectionSheet.svelte  ContextMenu.svelte  EditSessions.svelte  FileList.svelte  HostKeyDialog.svelte  Icon.svelte  InfoDialog.svelte  PreviewOverlay.svelte  Settings.svelte  TransfersPanel.svelte  brand-icons.ts
src/lib/stores/: edit.ts  prefs.ts  session.ts  transfers.ts
src/lib/styles/: app.css  tokens.css
src/routes/: +layout.svelte  +page.svelte
