[package]
name = "wonderblob"
version = "0.1.1"
description = "A cross-platform file browser"
authors = ["Jack Musick"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wonderblob_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
wonderblob-core = { path = "../crates/wonderblob-core" }
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-clipboard-manager = "2.3.2"
notify = "8"
base64 = "0.22"
sha2 = "0.10"

# Desktop-only. Required so the OneDrive OAuth callback `wonderblob://auth?code=…`
# is forwarded to the already-running instance instead of spawning a second app
# process: on Linux/Windows the deep-link plugin does NOT deliver in-process
# without this. The `deep-link` feature makes single-instance hand the URL to the
# deep-link plugin's `on_open_url` handler.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[dev-dependencies]
tempfile = "3"

